--- a/pages/contador.html
+++ b/pages/contador.html
@@ -1,101 +1,220 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex" />
     <!-- FAVICON -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../assets/images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../assets/images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../assets/images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../assets/images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../assets/images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../assets/images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../assets/images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="../assets/images/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicon/favicon-32x32.png?v=2">
-    <link rel="icon" type="image/png" sizes="96x96" href="../assets/images/favicon/favicon-96x96.png?v=2">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon/favicon-16x16.png?v=2">
-    <link rel="manifest" href="../assets/images/favicon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../assets/images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#34668a">
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="../assets/images/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="../assets/images/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="../assets/images/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="../assets/images/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="../assets/images/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="../assets/images/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="../assets/images/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="../assets/images/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../assets/images/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="../assets/images/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../assets/images/favicon/favicon-32x32.png?v=2"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="../assets/images/favicon/favicon-96x96.png?v=2"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../assets/images/favicon/favicon-16x16.png?v=2"
+    />
+    <link rel="manifest" href="../assets/images/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="../assets/images/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#34668a" />
     <title>Proximamente...</title>
     <!-- CSS BOOTSTRAP -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <!-- CSS CUSTOM -->
-    <link rel="stylesheet" href="../css/styles-custom.css">
-</head>
+    <link rel="stylesheet" href="../css/styles-custom.css" />
+  </head>
 
-<body>
+  <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="../index.html">
-                <img src="../assets/images/logo-enlazar-web.png" alt="Logo" width="200" height="35">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center">
-                    <li class="nav-item py-3">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item py-3">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item py-3">
-                        <a class="nav-link" href="cursos-capacitaciones.html">Cursos & Capacitaciones</a>
-                    </li>
-                    <li class="nav-item py-3 active-navbar-custom">
-                        <a class="nav-link" href="comunidad.html">Comunidad</a>
-                    </li>
-                    <li class="nav-item py-3">
-                        <a class="nav-link" href="../index.html#form-section">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 flex-row justify-content-evenly">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.instagram.com/enlazar.ok/" target="_blank"><img
-                                src="../assets/images/logo-instagram.svg" alt="Logo Instagram" width="20"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://t.me/joinchat/e8dtvJ5XB2k1MGIx" target="_blank"><img
-                                src="../assets/images/logo-telegram.svg" alt="Logo Telegram" width="20"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/company/enlazar" target="_blank"><img
-                                class="nav-link__instagram-linkedin" src="../assets/images/logo-linkedin.svg"
-                                alt="Logo Linkedin" width="20"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/enlazar.ok/" target="_blank"><img
-                                class="nav-link__instagram-linkedin" src="../assets/images/logo-facebook.svg"
-                                alt="Logo Facebook" width="20"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/Enlazar_ok" target="_blank"><img
-                                src="../assets/images/logo-twitter.svg" alt="Logo Twitter" width="20"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="nav-link__instagram-linkedin"
-                            src="../assets/images/logo-tiktok.svg" alt="Logo Tiktok" width="20"></a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="../index.html">
+          <img
+            src="../assets/images/logo-enlazar-web.png"
+            alt="Logo"
+            width="200"
+            height="35"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-center">
+            <li class="nav-item py-3">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item py-3">
+              <a class="nav-link" href="servicios.html">Servicios</a>
+            </li>
+            <li class="nav-item py-3">
+              <a class="nav-link" href="cursos-capacitaciones.html"
+                >Cursos & Capacitaciones</a
+              >
+            </li>
+            <li class="nav-item py-3 active-navbar-custom">
+              <a class="nav-link" href="comunidad.html">Comunidad</a>
+            </li>
+            <li class="nav-item py-3">
+              <a class="nav-link" href="../index.html#form-section">Contacto</a>
+            </li>
+          </ul>
         </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul
+            class="navbar-nav ms-auto mb-2 mb-lg-0 flex-row justify-content-evenly"
+          >
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.instagram.com/enlazar.ok/"
+                target="_blank"
+                ><img
+                  src="../assets/images/logo-instagram.svg"
+                  alt="Logo Instagram"
+                  width="20"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://t.me/joinchat/e8dtvJ5XB2k1MGIx"
+                target="_blank"
+                ><img
+                  src="../assets/images/logo-telegram.svg"
+                  alt="Logo Telegram"
+                  width="20"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.linkedin.com/company/enlazar"
+                target="_blank"
+                ><img
+                  class="nav-link__instagram-linkedin"
+                  src="../assets/images/logo-linkedin.svg"
+                  alt="Logo Linkedin"
+                  width="20"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.facebook.com/enlazar.ok/"
+                target="_blank"
+                ><img
+                  class="nav-link__instagram-linkedin"
+                  src="../assets/images/logo-facebook.svg"
+                  alt="Logo Facebook"
+                  width="20"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://twitter.com/Enlazar_ok"
+                target="_blank"
+                ><img
+                  src="../assets/images/logo-twitter.svg"
+                  alt="Logo Twitter"
+                  width="20"
+              /></a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="https://www.tiktok.com/@enlazar.ok"
+                target="_blank"
+                ><img
+                  class="nav-link__instagram-linkedin"
+                  src="../assets/images/logo-tiktok.svg"
+                  alt="Logo Tiktok"
+                  width="20"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <section class="countdown-section">
-        <h1 class="title-countdown">Nuestro campus estará disponible proximamente</h1>
-<!--         <div class="countdown" id="countdown">
+      <h1 class="title-countdown">
+        Nuestro campus estará disponible proximamente
+      </h1>
+      <!--         <div class="countdown" id="countdown">
             <div class="time">
                 <h2 id="days">00</h2>
                 <small>Días</small>
@@ -118,9 +237,7 @@
         </div> -->
     </section>
 
-
     <!-- <script src="../js/contador.js"></script> -->
     <script src="../js/bootstrap.bundle.js"></script>
-</body>
-
+  </body>
 </html>
