--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="robots" content="noindex" />
     <meta name="description" content="Equipo de trabajo de Consultora Enlazar ">
     <meta name="keywords"
         content=" Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral, ">
     <title>Nosotros - Consultora Enlazar</title>
+    <script>
+        {
+          window.location.replace("https://www.consultoraenlazar.xyz/team");
+        }
+      </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FDTGJRDSN"></script>
     <script>
